# PupBin

./: .gitignore  2  3  Cargo.toml  LICENSE  README.md  install_tool.sh
Frontend/: Cargo.toml  color.txt  logo.txt  strace.txt  test
Frontend/src/: main.rs
Frontend/src/actions/: get.rs  help.rs  mod.rs  paste.rs
Frontend/src/utils/: commandline_utils.rs  mod.rs
PupBin_Cleanup/: Cargo.toml
PupBin_Cleanup/src/: main.rs
PupBin_Cleanup/src/routes/: routes.rs
PupBin_Cleanup/src/utils/: mod.rs  text_assets.rs  utils_func.rs
RKGS/: go.mod  main.go  vars.go
RKGS/drivers/RKGS_rust/: Cargo.toml
RKGS/drivers/RKGS_rust/src/: lib.rs
download/: PKGBUILD  pupbin-bin-0.1.0-1-x86_64.pkg.tar.zst
download/pkg/pupbin-bin/: .BUILDINFO  .MTREE  .PKGINFO
download/src/: LICENSE  pupbin
lua/pupbin/: create_paste.lua  init.lua
migration/: Cargo.toml
migration/src/: lib.rs  m20220729_130509_paste.rs
plugin/: pupbin.vim
src/: main.rs  setup.sh
src/entity/: mod.rs  paste.rs  prelude.rs
src/routes/: get_paste.rs  mod.rs  new_paste.rs  routes.rs
src/utils/: text_assets.rs  utils_func.rs
