[package]
name = "pupbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0.141"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
