[package]
name = "pupbin"
version = "0.1.0"
edition = "2021"
authors = [ "Navin Shrinivas <karupal2002@gmail.com>" ]
description = "Frontend CLI tool for PupBin"
homepage = "github.com/NavinShrinivas/PupBin"
repository = "github.com/NavinShrinivas/PupBin"
license = "MIT"
keywords = ["cargo", "subcommand", "archlinux", "aur"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0.141"
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
