[package]
name = "PupBin_Cleanup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.20", features = ["full"]}
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { version = "^0.9.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde_urlencoded = "0.7"
serde =  { version = "1.0" , feature=["derive", "full"]}
serde_json = "1.0"

